--- a/taks5.html
+++ b/taks5.html
@@ -1,12 +1,14 @@
 <html>
    <head>
   	 <title>taks5</title>
-     <link rel="stylesheet" href="login_css.css" type="text/css">
+     <link rel="stylesheet" href="taks.css" type="text/css">
 <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1.0, user-scalable=no">
       <meta charset="UTF-8">
 
    </head>
+<style>
 
+</style>
 
 
 
