--- a/taks5.html
+++ b/taks5.html
@@ -51,7 +51,7 @@
               <div class="xiantiao2"></div>
       <div class="zhuanye6">
  
-    <div class="jieshao">自我介绍&nbsp;&nbsp;｜</div> <div class="neirong">可以洗衣做饭照顾老人可以洗衣做饭照顾老人可以洗衣做饭照顾老人可以洗衣做饭照顾老人</div>
+    <div class="jieshao">自我介绍&nbsp;｜</div> <div class="neirong">可以洗衣做饭照顾老人可以洗衣做饭照顾老人可以洗衣做饭照顾老人可以洗衣做饭照顾老人</div>
           <div class="xiantiao3"></div> 
 </div>
 
