--- a/taks5.html
+++ b/taks5.html
@@ -16,8 +16,8 @@
 <div  class="beijing"> 
 
         <div class="header">
-            <div class="jiantou">〈</div>
-            <span>个人主页</span>
+            <div class="jiantou" style="color:#FFF">〈</div>
+            <span><a style="color:#FFF">个人主页</a></span>
         </div>   
       <img src="images/beijing3.png">
 
@@ -34,34 +34,34 @@
   </div>
            <div class="xiantiao"></div>
    <div class="zhuanye2">
-    <div class="zhusu">☆&nbsp;住家&nbsp;&nbsp;&nbsp;☆&nbsp;不含餐</div>
+    <div class="zhusu">☆&nbsp;<a style="color:black">住家</a>&nbsp;&nbsp;&nbsp;☆&nbsp;<a style="color:black">不含餐</a></div>
    </div>
    <div class="zhuanye3"> 
-       <div class="nianxian">从业年限&nbsp;&nbsp;｜&nbsp;&nbsp;0-3年</div>
+       <div class="nianxian"><a style="color:#C3a8a8">从业年限</a>&nbsp;&nbsp;<a style="color:#C3a8a8">｜</a>&nbsp;&nbsp;<a style="color:black">0-3年</a></div>
     </div> 
              <div class="xiantiao2"></div> 
       <div class="zhuanye4">
     
-      <div class="shijian">工作时间&nbsp;&nbsp;｜&nbsp;&nbsp;全天</div>
+      <div class="shijian"><a style="color:#C3a8a8">工作时间</a>&nbsp;&nbsp;<a style="color:#C3a8a8">｜</a>&nbsp;&nbsp;<a style="color:black">全天</a></div>
       </div>
               <div class="xiantiao2"></div>
     <div class="zhuanye5">
-            <div class="jiage">服务价格&nbsp;&nbsp;｜&nbsp;&nbsp;25元/每小时</div>
+            <div class="jiage"><a style="color:#C3a8a8">服务价格</a>&nbsp;&nbsp;<a style="color:#C3a8a8">｜</a>&nbsp;&nbsp;<a style="color:black">25元/每小时</a></div>
       </div>
               <div class="xiantiao2"></div>
       <div class="zhuanye6">
  
-    <div class="jieshao">自我介绍&nbsp;｜</div> <div class="neirong">可以洗衣做饭照顾老人可以洗衣做饭照顾老人可以洗衣做饭照顾老人可以洗衣做饭照顾老人</div>
+    <div class="jieshao"><a style="color:#"><a style="color:#C3a8a8">自我介绍</a>&nbsp;<a style="color:#C3a8a8">｜</a></div> <div class="neirong"><a style="color:black">可以洗衣做饭照顾老人可以洗衣做饭照顾老人可以洗衣做饭照顾老人可以洗衣做饭照顾老人</a></div>
           <div class="xiantiao3"></div> 
 </div>
 
     <div class="footer">
 
    
-     <button type="liuyan" >留言</button>
+     <button type="liuyan" ><a style="color:#28d7e8">留言</a></button>
    
   
-     <button type="dianhua" style="background-color:#28d7e8">电话</button>
+     <button type="dianhua" style="background-color:#28d7e8"><a style="color:#FFF">电话联系</a></button>
 
 
     </div>
