--- a/taks5.html
+++ b/taks5.html
@@ -7,7 +7,7 @@
 
    </head>
 <style>
-
+a { text-decoration: none}
 </style>
 
 
@@ -16,10 +16,10 @@
 <div  class="beijing"> 
 
         <div class="header">
-            <div class="jiantou" style="color:#FFF">〈</div>
+            <div class="jiantou" style="color:#FFF"><a href="http://www.baidu.com/">〈</a></div>
             <span><a style="color:#FFF">个人主页</a></span>
         </div>   
-      <img src="images/beijing3.png">
+      <img src="images/tuceng.png">
 
 </div>
      <div class="yemian">
@@ -30,29 +30,33 @@
     </div>
   <div class="jianjie">
     
-       <div class="jineng">｜专业技能</div>
+       <div class="jineng"><a style="border-left:solid 5.5px #28d7e8;margin-left:8px;padding-left:9px;">专业技能</a></div>
   </div>
            <div class="xiantiao"></div>
    <div class="zhuanye2">
-    <div class="zhusu">☆&nbsp;<a style="color:black">住家</a>&nbsp;&nbsp;&nbsp;☆&nbsp;<a style="color:black">不含餐</a></div>
+    <div class="zhusu"><img src="images/xingxing.png" style="width:1.1rem">&nbsp;<a style="color:black">住家</a>&nbsp;&nbsp;&nbsp;<img src="images/xingxing.png" style="width:1.1rem">&nbsp;<a style="color:black;">不含餐</a></div>
    </div>
+   <div class="xiantiao2"></div> 
    <div class="zhuanye3"> 
-       <div class="nianxian"><a style="color:#C3a8a8">从业年限</a>&nbsp;&nbsp;<a style="color:#C3a8a8">｜</a>&nbsp;&nbsp;<a style="color:black">0-3年</a></div>
+       <div class="nianxian"><a style="color:#C0C0C0">从业年限</a>&nbsp;&nbsp;&nbsp;&nbsp;<a style="color:black; border-left:solid 1px #C0C0C0;padding-left:28px;margin-left:-6px;">0-3年</a></div>
     </div> 
              <div class="xiantiao2"></div> 
       <div class="zhuanye4">
     
-      <div class="shijian"><a style="color:#C3a8a8">工作时间</a>&nbsp;&nbsp;<a style="color:#C3a8a8">｜</a>&nbsp;&nbsp;<a style="color:black">全天</a></div>
+      <div class="shijian">工作时间&nbsp;&nbsp;&nbsp;&nbsp;<a style=" color:black;border-left:solid 1px #C0C0C0;padding-left:28px;margin-left:-6px;">全天</a></div>
+</div>
+<div class="xiantiao2"></div>
+      <div class="zhuanye5">
+       <div class="jiage"><a styler="color:#C0C0C0">服务价格</a>&nbsp;&nbsp;&nbsp;&nbsp;
+      <a style=" color:black;border-left:solid 1px #C0C0C0;padding-left:28px;margin-left:-11px;">25元/每小时</a></div>
       </div>
-              <div class="xiantiao2"></div>
-    <div class="zhuanye5">
-            <div class="jiage"><a style="color:#C3a8a8">服务价格</a>&nbsp;&nbsp;<a style="color:#C3a8a8">｜</a>&nbsp;&nbsp;<a style="color:black">25元/每小时</a></div>
       </div>
-              <div class="xiantiao2"></div>
-      <div class="zhuanye6">
- 
-    <div class="jieshao"><a style="color:#"><a style="color:#C3a8a8">自我介绍</a>&nbsp;<a style="color:#C3a8a8">｜</a></div> <div class="neirong"><a style="color:black">可以洗衣做饭照顾老人可以洗衣做饭照顾老人可以洗衣做饭照顾老人可以洗衣做饭照顾老人</a></div>
+            <div class="xiantiao2"></div>
+              <div class="zhuanye6">
+
+    <div class="jieshao"><a style="color:#C0C0C0;border-right:solid 1px;padding-right:13%;margin-right:-1%;">自我介绍</a></div> <div class="neirong"><a style="color:black">可以洗衣做饭照顾老人可以洗衣做饭照顾老人可以洗衣做饭照顾老人可以洗衣做饭照顾老人</a></div>
           <div class="xiantiao3"></div> 
+
 </div>
 
     <div class="footer">
