--- a/taks5.html
+++ b/taks5.html
@@ -24,8 +24,8 @@ a { text-decoration: none}
 </div>
      <div class="yemian">
        <img src="images/touxiang.png">
-        <div class="xingming"> 徐士林 55岁</div>
-        <div class="dizhi"><img src="images/dizhi.png"> 京城 四方 报纸林</div>
+        <div class="xingming"><a style="color:#FFF"> 徐士林 55岁</a></div>.
+        <div class="dizhi"><img src="images/dizhi.png"><a style="color:#FFF"> 京城 四方 报纸林</a></div>
 
     </div>
   <div class="jianjie">
@@ -48,7 +48,7 @@ a { text-decoration: none}
 <div class="xiantiao2"></div>
       <div class="zhuanye5">
        <div class="jiage"><a styler="color:#C0C0C0">服务价格</a>&nbsp;&nbsp;&nbsp;&nbsp;
-      <a style=" color:black;border-left:solid 1px #C0C0C0;padding-left:28px;margin-left:-11px;">25元/每小时</a></div>
+      <a style=" color:red;border-left:solid 1px #C0C0C0;padding-left:28px;margin-left:-11px;">25元/每小时</a></div>
       </div>
       </div>
             <div class="xiantiao2"></div>
@@ -56,6 +56,7 @@ a { text-decoration: none}
 
     <div class="jieshao"><a style="color:#C0C0C0;border-right:solid 1px;padding-right:13%;margin-right:-1%;">自我介绍</a></div> <div class="neirong"><a style="color:black">可以洗衣做饭照顾老人可以洗衣做饭照顾老人可以洗衣做饭照顾老人可以洗衣做饭照顾老人</a></div>
           <div class="xiantiao3"></div> 
+          <div class="zhuanye7"></div>
 
 </div>
 
@@ -77,3 +78,4 @@ a { text-decoration: none}
  
 
 </html>
+汪开放
