--- a/taks5.html
+++ b/taks5.html
@@ -32,34 +32,27 @@ a { text-decoration: none}
     
        <div class="jineng"><a style="border-left:solid 5.5px #28d7e8;margin-left:8px;padding-left:9px;">专业技能</a></div>
   </div>
-           <div class="xiantiao"></div>
-   <div class="zhuanye2">
-    <div class="zhusu"><img src="images/xingxing.png" style="width:1.1rem">&nbsp;<a style="color:black">住家</a>&nbsp;&nbsp;&nbsp;<img src="images/xingxing.png" style="width:1.1rem">&nbsp;<a style="color:black;">不含餐</a></div>
-   </div>
-   <div class="xiantiao2"></div> 
-   <div class="zhuanye3"> 
+
+   <ul class="zhuanye2">
+    <div class="canzhu" style="padding: 2%;margin-left:-32px;border-bottom: 1px solid #C0C0C0;">
+    <div class="zhusu"><img src="images/xingxing.png" style="width:1.1rem">&nbsp;<a style="color:black">住家</a>&nbsp;&nbsp;<img src="images/xingxing.png" style="width:1.1rem">&nbsp;<a style="color:black;">不含餐</a></div>
+    </div>
+    <div class="zhuanye3"> 
        <div class="nianxian"><a style="color:#C0C0C0">从业年限</a>&nbsp;&nbsp;&nbsp;&nbsp;<a style="color:black; border-left:solid 1px #C0C0C0;padding-left:28px;margin-left:-6px;">0-3年</a></div>
     </div> 
-             <div class="xiantiao2"></div> 
-      <div class="zhuanye4">
-    
+       <div class="zhuanye4">    
       <div class="shijian">工作时间&nbsp;&nbsp;&nbsp;&nbsp;<a style=" color:black;border-left:solid 1px #C0C0C0;padding-left:28px;margin-left:-6px;">全天</a></div>
 </div>
-<div class="xiantiao2"></div>
       <div class="zhuanye5">
        <div class="jiage"><a styler="color:#C0C0C0">服务价格</a>&nbsp;&nbsp;&nbsp;&nbsp;
       <a style=" color:red;border-left:solid 1px #C0C0C0;padding-left:28px;margin-left:-11px;">25元/每小时</a></div>
       </div>
       </div>
-            <div class="xiantiao2"></div>
-              <div class="zhuanye6">
-
+    <div class="zhuanye6">
     <div class="jieshao"><a style="color:#C0C0C0;border-right:solid 1px;padding-right:13%;margin-right:-1%;">自我介绍</a></div> <div class="neirong"><a style="color:black">可以洗衣做饭照顾老人可以洗衣做饭照顾老人可以洗衣做饭照顾老人可以洗衣做饭照顾老人</a></div>
-          <div class="xiantiao3"></div> 
-          <div class="zhuanye7"></div>
-
-</div>
-
+    </div>
+             <div class="zhuanye7"></div>
+</ul>
     <div class="footer">
 
    
@@ -78,4 +71,3 @@ a { text-decoration: none}
  
 
 </html>
-汪开放
