--- a/taks5.html
+++ b/taks5.html
@@ -16,15 +16,13 @@ a { text-decoration: none}
 <div  class="beijing"> 
 
         <div class="header">
-            <div class="jiantou" style="color:#FFF"><a href="http://www.baidu.com/">〈</a></div>
+            <img src="images/jiantou.png">
             <span><a style="color:#FFF">个人主页</a></span>
-        </div>   
-      <img src="images/tuceng.png">
-
-</div>
+        </div></div>
+              <img src="images/beijing3.png"style="width: 100%;height: 220px;overflow: hidden; margin-top: 4%;">
      <div class="yemian">
        <img src="images/touxiang.png">
-        <div class="xingming"><a style="color:#FFF"> 徐士林 55岁</a></div>.
+        <div class="xingming"><a style="color:#FFF"> 徐士林 55岁</a></div>
         <div class="dizhi"><img src="images/dizhi.png"><a style="color:#FFF"> 京城 四方 报纸林</a></div>
 
     </div>
@@ -35,7 +33,9 @@ a { text-decoration: none}
 
    <ul class="zhuanye2">
     <div class="canzhu" style="padding: 2%;margin-left:-32px;border-bottom: 1px solid #C0C0C0;">
-    <div class="zhusu"><img src="images/xingxing.png" style="width:1.1rem">&nbsp;<a style="color:black">住家</a>&nbsp;&nbsp;<img src="images/xingxing.png" style="width:1.1rem">&nbsp;<a style="color:black;">不含餐</a></div>
+    <div class="zhusu"><img src="images/xingxing.png" style="width:1.1rem">&nbsp;<a style=" color:black; border-right: 1px solid #C0C0C0;padding-right: 21px;">住家</a>&nbsp;&nbsp;
+    <img src="images/xingxing.png" style="width:1.1rem">&nbsp;<a style="color:black;">不含餐</a>
+    </div>
     </div>
     <div class="zhuanye3"> 
        <div class="nianxian"><a style="color:#C0C0C0">从业年限</a>&nbsp;&nbsp;&nbsp;&nbsp;<a style="color:black; border-left:solid 1px #C0C0C0;padding-left:28px;margin-left:-6px;">0-3年</a></div>
@@ -45,11 +45,11 @@ a { text-decoration: none}
 </div>
       <div class="zhuanye5">
        <div class="jiage"><a styler="color:#C0C0C0">服务价格</a>&nbsp;&nbsp;&nbsp;&nbsp;
-      <a style=" color:red;border-left:solid 1px #C0C0C0;padding-left:28px;margin-left:-11px;">25元/每小时</a></div>
+      <a style=" color:red;border-left:solid 1px #C0C0C0;padding-left:28px;margin-left:-10px;">25元/每小时</a></div>
       </div>
       </div>
     <div class="zhuanye6">
-    <div class="jieshao"><a style="color:#C0C0C0;border-right:solid 1px;padding-right:13%;margin-right:-1%;">自我介绍</a></div> <div class="neirong"><a style="color:black">可以洗衣做饭照顾老人可以洗衣做饭照顾老人可以洗衣做饭照顾老人可以洗衣做饭照顾老人</a></div>
+    <div class="jieshao"><a style="color:#C0C0C0;border-right:solid 1px;padding-right:15%;margin-right:-1%;">自我介绍</a></div> <div class="neirong"><a style="color:black">可以洗衣做饭照顾老人可以洗衣做饭照顾老人可以洗衣做饭照顾老人可以洗衣做饭照顾老人</a></div>
     </div>
              <div class="zhuanye7"></div>
 </ul>
